# DoubleDescent

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
configs/experiments/: baseline_sweep.json  categorical_sweep.json  high_censoring_sweep.json  lognormal_sweep.json  nonlinear_extended_sweep.json  nonlinear_sweep.json  regularized_sweep.json
configs/scenarios/: baseline.json  categorical_embedding.json  high_cardinality.json  imbalanced.json  nonlinear.json  skewed.json
configs/schemas/: experiment.json  scenario.json
docs/: Double Descent in Time-to-Event Data.md  Proposal_ Investigating the Double Descent Phenomenon in Survival Analysis.md
manuscript/: build.sh  main.tex  references.bib
outputs/: .gitkeep
outputs/analysis/: convergence_analysis.csv
outputs/baselines/: baseline_001_seed_1011_baselines.csv  baseline_001_seed_1011_baselines.json  baseline_001_seed_123_baselines.json  baseline_001_seed_1618_baselines.csv  baseline_001_seed_1618_baselines.json  baseline_001_seed_2025_baselines.csv  baseline_001_seed_2025_baselines.json  baseline_001_seed_2026_baselines.csv  baseline_001_seed_2026_baselines.json  baseline_001_seed_2718_baselines.csv  baseline_001_seed_2718_baselines.json  baseline_001_seed_3141_baselines.csv  baseline_001_seed_3333_baselines.csv  baseline_001_seed_3333_baselines.json  baseline_001_seed_42_baselines.csv  baseline_001_seed_42_baselines.json  baseline_001_seed_4444_baselines.csv  baseline_001_seed_4444_baselines.json  baseline_001_seed_456_baselines.csv  baseline_001_seed_456_baselines.json  baseline_001_seed_5555_baselines.csv  baseline_001_seed_5555_baselines.json  baseline_001_seed_7777_baselines.csv  baseline_001_seed_789_baselines.csv  baseline_001_seed_789_baselines.json  categorical_001_seed_1011_baselines.csv  categorical_001_seed_1011_baselines.json  categorical_001_seed_123_baselines.csv  categorical_001_seed_123_baselines.json  categorical_001_seed_1414_baselines.csv  categorical_001_seed_1414_baselines.json  (+184 more)
scripts/: analyze_training_dynamics.py  debug_ibs_discrepancy.py  generate_paper_figures.py  regenerate_manuscript_figures.py  run_all_analyses.sh  run_baselines.py  run_embedding_experiment.py  run_full_pipeline.sh  run_multi_seed.py
src/: __init__.py
tests/: __init__.py  conftest.py
(+57 files in other folders)
